--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+	<head>
+		<script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
+		<script type="module">
+			// Import the functions you need from the SDKs you need
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+			// TODO: Add SDKs for Firebase products that you want to use
+			// https://firebase.google.com/docs/web/setup#available-libraries
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+			// Your web app's Firebase configuration
+			const firebaseConfig = {
+			  apiKey: "AIzaSyBbHK1Ngsuv5PShjvwtgnOASF7xhXnEjvU",
+			  authDomain: "rfw-preview.firebaseapp.com",
+			  projectId: "rfw-preview",
+			  storageBucket: "rfw-preview.firebasestorage.app",
+			  messagingSenderId: "570930611515",
+			  appId: "1:570930611515:web:e5d46cc5a751e80fa4a31e"
+			};
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+		</script>
+		<!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="rfw_studio">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+      This is a placeholder for base href that will be replaced by the value of
+      the `--base-href` argument provided to `flutter build`.
+    -->
+		<base href="$FLUTTER_BASE_HREF" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+		<meta charset="UTF-8" />
+		<meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+		<meta name="description" content="A new Flutter project." />
 
-  <title>rfw_studio</title>
-  <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <script src="flutter_bootstrap.js" async></script>
-</body>
+		<!-- iOS meta tags & icons -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="Европа" />
+		<link rel="apple-touch-icon" href="icons/Icon-192.png" />
+		<meta name="msapplication-TileColor" content="#262626" />
+		<meta name="theme-color" content="#262626" />
+		<script>
+			{{flutter_service_worker_version}}
+		</script>
+
+		<!-- Favicon -->
+		<link rel="icon" type="image/png" href="favicon.png" />
+		<title>RFW Studio</title>
+		<link rel="manifest" href="manifest.json" />
+
+		<!-- This script adds the flutter initialization JS code -->
+		<script src="https://telegram.org/js/telegram-web-app.js" defer=""></script>
+	</head>
+
+	<body>
+		<script>
+			{{flutter_js}}
+			{{flutter_build_config}}
+
+			 // https://stackoverflow.com/questions/77808636/telegram-web-app-collapse-on-bottom-swipe
+			 // костыль для версий telegram bot api до 7.7 для того, чтобы не закрывалось окно
+			 // при свайпе вверх
+			 let ts;
+			 const onTouchStart = (e) => {
+			   ts = e.touches[0].clientY
+			 }
+			 const onTouchMove = (e) => {
+			   let scrollableEl = document.getElementsByTagName("flutter-view")[0]
+			   if (scrollableEl) {
+			     const scroll = scrollableEl.scrollTop
+			     const te = e.changedTouches[0].clientY
+			     if (scroll <= 0 && ts < te) {
+			       e.preventDefault()
+			     }
+			   } else {
+			     e.preventDefault()
+			   }
+			 }
+			 document.documentElement.addEventListener('touchstart', onTouchStart, { passive: false })
+			 document.documentElement.addEventListener('touchmove', onTouchMove, { passive: false })
+
+			 window.addEventListener('load', function(ev) {
+			     // Download main.dart.js
+			     _flutter.loader.load({
+			            onEntrypointLoaded: async function(engineInitializer) {
+			                 const appRunner = await engineInitializer.initializeEngine();
+			                 appRunner.runApp();
+
+			              },
+			     });
+			   });
+		</script>
+	</body>
 </html>
